crates/rome_cli/tests/snapshots/main_check/apply_suggested_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 147
expression: content
---
## `fix.js`

```js
let a = 4;
debugger;
console.log(a);

```


