crates/rome_cli/tests/snapshots/main_check/downgrade_severity.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "correctness": {
            "recommended": true,      
            "noDebugger": "warn"
        }
    }
  }
}
```

## `file.js`

```js
debugger;
```

# Emitted Messages

```block
file.js:1:1 lint/correctness/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
  
  i Suggested fix: Remove debugger statement
  
      | @@ -1 +0,0 @@
  0   | - debugger;
  

```


