crates/rome_cli/tests/snapshots/main_check/no_lint_if_linter_is_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 147
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js

if(a != -0) {}

```

# Emitted Messages

```block
fix.js: error[IO]: unhandled file type
```


