crates/rome_cli/tests/snapshots/main_check/no_lint_when_file_is_ignored.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": true,
    "ignore": ["test.js"]
  }
}

```

## `test.js`

```js

if(a != -0) {}

```

# Emitted Messages


