crates/rome_cli/tests/snapshots/main_check/upgrade_severity.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "nursery": {
            "noUnreachable": "error",
            "noUnusedVariables": "error"
        }
    }
  }
}
```

## `file.js`

```js
function f() {
    for (;;) {
        continue;
        break;
    }
}

```

# Termination Message

```block
errors where emitted while running checks
```

# Emitted Messages

```block
error[nursery/noUnreachable]: This code is unreachable
  ┌─ file.js:3:9
  │  
3 │ ┌         continue;
4 │ │         break;
  │ └──────────────^


```

```block
error[nursery/noUnusedVariables]: This function is unused.
  ┌─ file.js:1:10
  │
1 │ function f() {
  │          ^

=  note: Unused variables usually are result of incomplete refactoring, typos and other source of bugs.


```


